--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <div class="carousel-item">
                             <div class="row d-flex justify-content-between align-items-center">
                                 <div class="col-sm-12 col-md-6 text-center slider-desc animate__animated animate__bounce py-5">
-                                    <h1>we add fun to learn</h1>
+                                    <h1>we add fun to learn!!!!!</h1>
                                     <a class="btn animate__animated animate__rotateInDownLeft" href="#more" >More</a>
                                 </div>
                                 <div class="col-md-5 d-none d-md-block animate__animated animate__shakeX">
